# amazon-kinesis-video-streams-webrtc-sdk-c

./: .gitignore  CMakeLists.txt  ChannelInfo_8c.html  ChannelInfo_8h.html  ChannelInfo_8h_source.html  Client_8c.html  ConnectionListener_8c.html  ConnectionListener_8h.html  ConnectionListener_8h_source.html  Crypto_8c.html  Crypto_8h.html  Crypto_8h_source.html  DataChannel_8c.html  DataChannel_8h.html  DataChannel_8h_source.html  Deserialize_8c.html  Dtls_8c.html  Dtls_8h.html  Dtls_8h_source.html  Dtls__mbedtls_8c.html  Dtls__openssl_8c.html  FileCache_8c.html  FileCache_8h.html  FileCache_8h_source.html  IOBuffer_8c.html  IOBuffer_8h.html  IOBuffer_8h_source.html  IceAgentStateMachine_8c.html  IceAgentStateMachine_8h.html  IceAgentStateMachine_8h_source.html  IceAgent_8c.html  IceAgent_8h.html  IceAgent_8h_source.html  IceUtils_8c.html  IceUtils_8h.html  IceUtils_8h_source.html  Include_8h.html  Include_8h_source.html  Include__i_8h.html  Include__i_8h_source.html  (+530 more)
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml
CMake/Dependencies/: libkvsCommonLws-CMakeLists.txt
cys/: CMakeLists.txt  cysWebRTCClientMaster.c  g711.c  g711.h  g711_table.c
samples/: Common.c
src/source/Crypto/: Dtls_openssl.c
src/source/Cys/: ChannelInfo.c  LwsApiCalls.c
src/source/Ice/: IceAgent.c
src/source/PeerConnection/: PeerConnection.c
src/source/Srs/: ChannelInfo.c  Client.c  LwsApiCalls.c  Signaling.c  StateMachine.c
src/source/Zlm/: ChannelInfo.c  Client.c  LwsApiCalls.c  Signaling.c  StateMachine.c
srs/: CMakeLists.txt  Common.c  Samples.h  main.c
zlm/: CMakeLists.txt  Common.c  JzCommon.c  JzCommon.h  Samples.h  cyIpcZlmClientMaster.c  cySamplesZlmClientMaster.c  g711_table.h  main.c  toolchain_mips.cmake
zlm/mips32/include/imp/: imp_audio.h  imp_ivs_base_move.h
zlm/pcmSample/: Nocturne-8KHz-16bit-mono.pcm
